@@ -2,7 +2,9 @@
 
 - Now intelligently guesses correct UI category when an invalid category has been provided
 - Fix workplace allocation when old-format workplace totals are used (includes correction of rounding errors)
-- Improved resiliance from invalid office and industrial subservices
+- Improved resiliance to invalid office and industrial subservices
+- Building level corrections are now reported quietly in the log, not screaming in your face
+- Ditto for XML files containing no valid buildings
 
 
 Version 1.2.2
@@ -30,7 +32,7 @@ Version 1.2
 - Building levels now sanity checked and overridden when out-of-bounds (no more crashes due to insane values)
 - Code cleanups and streamlining
 
-dw
+
 Version 1.1.1
 
 - Remove development logging
